[#86DevUIAlignment][Marcus] fix: added loading animation to home page. Styled home page.

--- a/src/Component/HomeCinemaCard/HomeCinemaCard.css
+++ b/src/Component/HomeCinemaCard/HomeCinemaCard.css
@@ -7,7 +7,9 @@
   top: 50%;
   color: white;
   font-size: 20px;
-
-  /* font: normal normal bold 20px/25px Helvetica Neue; */
 }
 
+.home-cinema-card-image {
+  height: 9rem !important;
+}
+/* font: normal normal bold 20px/25px Helvetica Neue; */
