--- a/src/Component/HomePage/HomePage.css
+++ b/src/Component/HomePage/HomePage.css
@@ -1,15 +1,3 @@
-.paper-content {
-  margin-top: 80px !important;
-}
-
-.section-title {
-  font-weight: 700;
-  font-size: 180%;
-  text-align: left;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #000000;
-}
-
 .section-more {
     display: flex;
     flex-direction: row;
@@ -17,7 +5,8 @@
 }
 
 .section-more a {
-  font-size: 180%;
+  font-size: 130%;
+  font-weight: 300;
   text-decoration: none;
   color: #0076ff;
   text-align: right;
@@ -36,7 +25,7 @@
 
 .home-cinema-card {
   padding: 0px;
-  height: 150px;
+  height: 150px !important;
 }
 
 .scrolling-wrapper {
